add_subdirectory(Graphics)
add_subdirectory(Math)
add_subdirectory(Debug)
add_subdirectory(Filesystem)
add_subdirectory(Multithread)
add_subdirectory(Components)
add_subdirectory(Time)
add_subdirectory(Misc)
add_subdirectory(Loaders)
add_subdirectory(Manager)
add_subdirectory(Type)
add_subdirectory(Input)
add_subdirectory(Prefab)